--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.4.1",
+    "@vueuse/motion": "^2.0.0",
+    "animate.css": "^4.1.1",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
