--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vueuse/core": "^10.4.1",
     "@vueuse/motion": "^2.0.0",
     "animate.css": "^4.1.1",
+    "gsap": "^3.12.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "wowjs": "^1.1.3"
