--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.12.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
+    "vue-toastification": "^2.0.0-rc.5",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
